# Kingfisher

./: BUILD.bazel  Kingfisher.podspec
Demo/Demo/Kingfisher-Demo/: ViewController.swift
Demo/Kingfisher-Demo.xcodeproj/xcshareddata/xcschemes/: Kingfisher-Demo.xcscheme
Kingfisher.xcodeproj/: project.pbxproj
Sources/: Image.swift  ImageProcessor.swift
